infrastructure/kubernetes/games/cdn-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: games-cdn
  namespace: gamehub
spec:
  replicas: 1
  selector:
    matchLabels:
      app: games-cdn
  template:
    metadata:
      labels:
        app: games-cdn
    spec:
      containers:
      - name: nginx
        image: nginx:alpine
        ports:
        - containerPort: 80
        volumeMounts:
        - name: juegos
          mountPath: /usr/share/nginx/html/juegos
        - name: config
          mountPath: /etc/nginx/nginx.conf
          subPath: nginx.conf
      volumes:
      - name: juegos
        hostPath:
          path: /mnt/c/tests/gamehub/juegos
          type: Directory
      - name: config
        configMap:
          name: games-cdn-config
---
apiVersion: v1
kind: Service
metadata:
  name: games-cdn-service
  namespace: gamehub
spec:
  type: NodePort
  selector:
    app: games-cdn
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
